[project]
name = "spraygen"
version = "2.0.0"
description = "Enhanced password generation tool."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Derek Odiorne", email = "Derek.Odiorne@iFlockConsulting.com" }
]

dependencies = [
    "colorama>=0.4.0",
    "progress>=1.6"
]

[project.scripts]
spraygen = "spraygen.generator:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spraygen"]
exclude = ["install", "resources", "docs", "build"]
